--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     <!-- <a id="skip-to-content" href="#content">Skip to the content.</a> -->
 
     <header class="page-header" role="banner">
-      <a href="index"><h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1></a>
+      <h1 class="project-name"><a href="index">{{ page.title | default: site.title | default: site.github.repository_name }}</a></h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% comment %}
       {% if site.github.is_project_page %}
