--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <h3><a href="index" style="color: inherit;">Table of Contents</a></h3>
+      {% unless page.url == "/index" %}
+      <a href="index" style="color: white;">Table of Contents</a>
+      {% endunless %}
       {% comment %}
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
