changed table of contents link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% unless page.url == "/index" %}
-      <a href="index" style="color: white;">Table of Contents</a>
+      {% unless page.url == "/index" or page.url == "/" %}
+      <a href="/" style="color: white;">Table of Contents</a>
       {% endunless %}
       {% comment %}
       {% if site.github.is_project_page %}
