fixed table of contents link href

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% unless page.url == "/index" or page.url == "/" %}
-      <a href="/" style="color: white;">Table of Contents</a>
+      <a href="/mat327" style="color: white;">Table of Contents</a>
       {% endunless %}
       {% comment %}
       {% if site.github.is_project_page %}
