added tex macros to mathjax config

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
+      TeX: {
+        Macros: {
+          R: "\\mathbb R",
+          N: "\\mathbb N"
+        }
+      }
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']],
         processEscapes: true
       }
+
     });
     </script>
     <meta charset="UTF-8">
