possibly fixed mathjax tex macros

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
     MathJax.Hub.Config({
       TeX: {
         Macros: {
-          R: "\\mathbb R",
-          N: "\\mathbb N"
+          R: "{\\mathbb R}",
+          N: "{\\mathbb N}"
         }
       }
       tex2jax: {
