sidebar style adjustments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,17 @@
                 position: relative;
                 float: left;
                 width: 300px;
-                left: calc((100% - 1024px) / 2);
+                /*left: calc((100% - 800px) / 2);*/
                 min-height: calc(100vh - 140px);
                 padding-top: 10px;
+            }
+            main {
+                display: block;
+                position: relative;
+                float: left;
+                left: calc((100% - 800px) / 2);
+                width: calc(100% - 300px);
+                margin: 0;
             }
         }
     </style>
