--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
     <style type="text/css">
         #sidebar {
             display: none;
+            font-size: 14;
         }
         @media only screen and (min-width: 800px) {
             #sidebar {
@@ -46,7 +47,7 @@
                 display: block;
                 position: relative;
                 float: left;
-                left: calc((100% - 800px) / 2);
+                /*left: calc((100% - 800px) / 2);*/
                 width: calc(100% - 300px);
                 margin: 0;
             }
