--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,15 +31,15 @@
     <style type="text/css">
         #sidebar {
             display: none;
-            font-size: 14;
+            font-size: 14px;
         }
-        @media only screen and (min-width: 800px) {
+        @media only screen and (min-width: 1000px) {
             #sidebar {
                 display: block;
                 position: relative;
                 float: left;
-                width: 300px;
-                /*left: calc((100% - 800px) / 2);*/
+                width: 250px;
+                /*left: calc((100% - 1000px) / 2);*/
                 min-height: calc(100vh - 140px);
                 padding-top: 10px;
             }
@@ -47,8 +47,8 @@
                 display: block;
                 position: relative;
                 float: left;
-                /*left: calc((100% - 800px) / 2);*/
-                width: calc(100% - 300px);
+                /*left: calc((100% - 1000px) / 2);*/
+                width: calc(100% - 250px);
                 margin: 0;
             }
         }
