--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
 
     {% unless page.url == "/index" or page.url == "/" %}
       <section id="sidebar">
-        <div class="js-toc"></div>
+        <div id="js-toc"></div>
       </section>
     {% endunless %}
 
@@ -101,9 +101,9 @@
     <script type="text/javascript">
         tocbot.init({
             // Where to render the table of contents.
-            tocSelector: '.js-toc',
+            tocSelector: '#js-toc',
             // Where to grab the headings to build the table of contents.
-            contentSelector: '.js-toc-content',
+            contentSelector: '#content',
             // Which headings to grab inside of the contentSelector element.
             headingSelector: 'h1, h2, h3, h4, h5, h6',
             // For headings inside relative or absolute positioned containers within content.
