--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
             }
         }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.11.1/tocbot.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.11.1/tocbot.css"> -->
 
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
