removed ordering from tocbot

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,6 +108,7 @@
             headingSelector: 'h1, h2, h3, h4, h5, h6',
             // For headings inside relative or absolute positioned containers within content.
             hasInnerContainers: true,
+            orderedList: false,
         });
     </script>
   </body>
