changed padding level for sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,9 @@
                 min-height: calc(100vh - 140px);
                 padding-top: 10px;
             }
+            #sidebar .ul {
+                padding-left: 25px;
+            }
             main {
                 display: block;
                 position: relative;
