adjusted css selector for toc-list

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,9 @@
             display: none;
             font-size: 14px;
         }
+        .toc-list {
+            padding-left: 25;
+        }
         @media only screen and (min-width: 1000px) {
             #sidebar {
                 display: block;
@@ -42,9 +45,6 @@
                 /*left: calc((100% - 1000px) / 2);*/
                 min-height: calc(100vh - 140px);
                 padding-top: 10px;
-            }
-            #sidebar .ul {
-                padding-left: 25px;
             }
             main {
                 display: block;
