added "px" to padding level

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
             font-size: 14px;
         }
         .toc-list {
-            padding-left: 25;
+            padding-left: 25px;
         }
         @media only screen and (min-width: 1000px) {
             #sidebar {
