moved link logic inside <a> tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,9 +70,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% unless page.url == "/index" or page.url == "/" %}
-      <a href="/mat327" style="color: white;">Table of Contents</a>
-      {% endunless %}
+      <a href="/mat327" style="color: white;">{% unless page.url == "/index" or page.url == "/" %}Back to Main Page{% endunless %}</a>
       {% comment %}
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
