added curlies to mathjax macros

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
       TeX: {
         Macros: {
           R: "{\\mathbb R}",
-          N: "{\\mathbb N}"
+          N: "{\\mathbb N}",
+          curlies: ["{\\lbrace #1 \\brace}", 1]
         }
       },
       tex2jax: {
